# resumy

./: .gitignore  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yaml  tests.yaml
src/resumy/: config.example.yaml  resumy.py
src/resumy/schemas/: jsonresume.yaml  resumy.yaml
src/resumy/themes/prairie/: theme.css  theme.html
src/resumy/themes/prairie/assets/: icons.css
